--- a/Platforms/iOS/Info.plist
+++ b/Platforms/iOS/Info.plist
@@ -28,5 +28,14 @@
 	</array>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/appicon.appiconset</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>We need this to collect the device location where it is sending the events from</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>We need this to collect the device location where it is sending the events from</string>
 </dict>
 </plist>
